--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -106,6 +106,7 @@ input {
 	font-weight: 400;
 	box-sizing: border-box;
 	padding: 3px 20px;
+	height: 26px;
 }
 .basebtn.__invert-blue {
 	color: #009cff;
@@ -135,6 +136,32 @@ input {
 }
 .basebtn.__invert-black:active {	background: #333; }
 
+.basebtn.__blue {
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#5e8ee4),color-stop(1,#4173c9));
+	text-shadow: 0 -1px 0 rgba(0,0,0,.08);
+	color: #fff;
+	border: none; 
+}
+.basebtn.__blue:focus,
+.basebtn.__blue:hover { background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#5587d7),color-stop(1,#396bbc)); }
+.basebtn.__blue:active { box-shadow: inset 0 2px 4px rgba(0,0,0,.24); }
+
+.basebtn.__gray {
+	background-color: #f5f5f5;
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#f9f9f9),color-stop(1,#f5f5f5));
+	border: 1px solid #e5e5e5;
+    color: #444;
+    text-shadow: 0 1px 0 #fff;
+
+}
+.basebtn.__gray:focus,
+.basebtn.__gray:hover {
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#f5f5f5),color-stop(1,#f1f1f1));
+	border-color: #e1e1e1;
+}
+.basebtn.__gray:active {
+	box-shadow: inset 0 1px 2px rgba(0,0,0,.12);
+}
 
 
 .bookmarks-block { width: 100%; height: 200px; }
