--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -189,3 +189,67 @@ a:hover {
 .review-item_publication-time {margin: 0; font-size: 11px; line-height: 13px; color: #aaa;}
 .review-item_tool-panel { display: none; position: absolute; top: 0; right: 0; }
 .review-item:hover > .review-item_tool-panel { display: block; }
+
+
+
+.navigation-table_wrap {
+	position: relative;
+	width: 100%;
+	height: 400px;
+	overflow-y: auto;
+	border-bottom: 1px solid #aaa;
+}
+.navigation-table_th {
+	position: sticky;
+	top: 0;
+	background: #fff;
+}
+.navigation-table {
+	width: 100%;
+	border-spacing: 0;
+}
+.navigation-table td {
+	
+	padding: 0;
+	/*border-color: #bbb;*/
+}
+.navigation-table tr:hover {
+	background-color: #ccc;
+}
+.navigation-table [data-action] {
+	cursor: pointer;
+}
+.navigation-table > thead td {
+	background-color: #dddce4;
+	padding: 4px 2px;
+}
+
+
+
+.btnline > .basebtn:not(:last-child) {margin-right: 16px;}
+
+
+
+.m3-dialog {
+	position: fixed;
+	display: none;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	z-index: 100;
+	background: rgba(0, 0, 0, 0.6);
+	text-align: center;
+}
+.m3-dialog[open]{display: block;}
+.m3-dialog:before {content: ""; display: inline-block;vertical-align: middle;width: 0;height:100%;}
+.m3-dialog-inner {
+	display: inline-block;vertical-align: middle;
+	width: 400px;
+	padding: 32px;
+	background-color: #fff;
+	text-align: left;
+}
