--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -242,16 +242,43 @@ a:hover {
 	margin: 0;
 	z-index: 100;
 	background: rgba(0, 0, 0, 0.6);
-	text-align: center;
+	border: 0;
+	padding: 0;
 }
 .m3-dialog[open]{display: block;}
-.m3-dialog:before {content: ""; display: inline-block;vertical-align: middle;width: 0;height:100%;}
 .m3-dialog-inner {
 	display: inline-block;vertical-align: middle;
 	width: 400px;
 	padding: 32px;
 	background-color: #fff;
 	text-align: left;
+}
+.m3-dialog-scroller {
+	width: 100%;
+	height: 100%;
+	overflow-y: auto;
+	text-align: center;
+}
+.m3-dialog-scroller:before {content: ""; display: inline-block;vertical-align: middle;width: 0;height:100%;}
+
+
+
+
+.ruleset-item {
+	position: relative;
+	padding: 0 0 20px 0;
+	border-bottom: 1px solid #ccc;
+	margin: 0 0 50px 0;
+}
+.ruleset-item > .ruleset-item_remove {
+	position: absolute;
+	right: 0;
+	top: 0;
+	cursor: pointer;
+}
+.ruleset-item p,
+.ruleset-item .basefield {
+	margin: 0 0 10px 0;
 }
 
 
