--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -195,7 +195,7 @@ a:hover {
 .navigation-table_wrap {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: calc(100vh - 148px);
 	overflow-y: auto;
 	border-bottom: 1px solid #aaa;
 }
@@ -252,6 +252,7 @@ a:hover {
 	padding: 32px;
 	background-color: #fff;
 	text-align: left;
+	box-sizing: border-box;
 }
 .m3-dialog-scroller {
 	width: 100%;
@@ -290,4 +291,18 @@ a:hover {
     overflow: hidden;
     z-index: -1;
     float: left;
+}
+
+
+
+
+.m3-dialog.__content .m3-dialog-inner {
+	width: calc(100% - 60px);
+}
+.m3-dialog.__content .content-dialog-wrapper {
+	white-space: pre-wrap;
+    word-break: break-all;
+    width: 100%;
+    display: block;
+
 }
