--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -55,6 +55,11 @@ input {
 .layout-line_cell-full { flex: 1 1 auto; }
 
 
+.layout-row { display: flex; flex-direction: column; width: 100%; height: 100%;}
+.layout-row_cell-auto { flex: 0 0 auto; }
+.layout-row_cell-full { flex: 1 1 auto; }
+
+
 
 .ta-r { text-align: right; }
 
@@ -264,7 +269,9 @@ a:hover {
 }
 .m3-dialog-scroller:before {content: ""; display: inline-block;vertical-align: middle;width: 0;height:100%;}
 
-
+.m3-dialog.__size-a .m3-dialog-inner {
+	width: calc(100% - 64px);
+}
 
 
 .ruleset-item {
@@ -303,9 +310,18 @@ a:hover {
 }
 .m3-dialog.__content .content-dialog-wrapper {
 	white-space: pre-wrap;
-    word-break: break-all;
-    width: 100%;
-    display: block;
+	word-break: break-all;
+	width: 100%;
+	display: block;
 }
+
+.m3-dialog.__text .m3-dialog-inner {
+	width: 100%;
+	height: 100%;
+	padding: 16px;
+}
+.edit-popup_title {margin: 0 0 12px 0; font-size: 15px; line-height: 18px;}
+.edit-popup_textbox {margin: 0 0 12px 0; font-size: 13px; line-height: 15px;}
+
 
 .app-header {padding: 6px 10px;background-color: #fafafa;}
