--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -215,10 +215,11 @@ a:hover {
 	border-spacing: 0;
 }
 .navigation-table td {
-	
-	padding: 0;
-	/*border-color: #bbb;*/
+	font-size: 13px;
+	line-height: 15px;
+	padding: 2px 0;
 }
+
 .navigation-table tr:hover {
 	background-color: #ccc;
 }
@@ -307,12 +308,14 @@ a:hover {
 
 .m3-dialog.__content .m3-dialog-inner {
 	width: calc(100% - 60px);
+	max-height: calc(100% - 40px);
 }
-.m3-dialog.__content .content-dialog-wrapper {
+.edit-popup_text-block {
 	white-space: pre-wrap;
 	word-break: break-all;
 	width: 100%;
 	display: block;
+	margin: 0;
 }
 
 .m3-dialog.__text .m3-dialog-inner {
@@ -322,6 +325,10 @@ a:hover {
 }
 .edit-popup_title {margin: 0 0 12px 0; font-size: 15px; line-height: 18px;}
 .edit-popup_textbox {margin: 0 0 12px 0; font-size: 13px; line-height: 15px;}
-
+.edit-popup_image {max-width: 100%; max-height: 100%; display: inline-block;vertical-align: middle;}
+.edit-popup_content-wrapper {position:relative; padding: 0 0 20px 0;}
+.edit-popup_image-wrap {
+	display: inline-block;vertical-align: middle;
+}
 
 .app-header {padding: 6px 10px;background-color: #fafafa;}
