--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,11 @@ input {
 .layout-line_cell-full { flex: 1 1 auto; }
 
 
+.layout-row { display: flex; flex-direction: column; width: 100%; height: 100%;}
+.layout-row_cell-auto { flex: 0 0 auto; }
+.layout-row_cell-full { flex: 1 1 auto; }
+
+
 
 .ta-r { text-align: right; }
 
@@ -64,6 +69,7 @@ input {
 .mb2 { margin-bottom: 16px; }
 .mb3 { margin-bottom: 24px; }
 .mb4 { margin-bottom: 32px; }
+.mr1 { margin-right: 8px; }
 
 
 .article-5 { font-size: 13px; line-height: 30px; }
@@ -95,6 +101,11 @@ input {
 	width: 100%;
 	max-width: 100%; /* for resizeable textarea */
 	box-sizing: border-box;
+	line-height: 18px;
+}
+.basefield.__invert-blue {
+	border-color: #009cff;
+	box-shadow: 0 2px 2px 0 rgba(31, 24, 24, 0.08);
 }
 
 
@@ -115,6 +126,10 @@ input {
 	border-radius: 3px;
 	background: #fff;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.08);
+}
+.basebtn.__invert-blue:disabled {
+	pointer-events: none;
+	color: #ccc;
 }
 .basebtn.__invert-blue:hover {
 	color: #fff;
@@ -195,7 +210,7 @@ a:hover {
 .navigation-table_wrap {
 	position: relative;
 	width: 100%;
-	height: 400px;
+	height: calc(100vh - 154px);
 	overflow-y: auto;
 	border-bottom: 1px solid #aaa;
 }
@@ -209,15 +224,17 @@ a:hover {
 	border-spacing: 0;
 }
 .navigation-table td {
-	
-	padding: 0;
-	/*border-color: #bbb;*/
+	font-size: 13px;
+	line-height: 15px;
+	padding: 2px 0;
 }
+
 .navigation-table tr:hover {
 	background-color: #ccc;
 }
 .navigation-table [data-action] {
 	cursor: pointer;
+	user-select: none;
 }
 .navigation-table > thead td {
 	background-color: #dddce4;
@@ -252,6 +269,7 @@ a:hover {
 	padding: 32px;
 	background-color: #fff;
 	text-align: left;
+	box-sizing: border-box;
 }
 .m3-dialog-scroller {
 	width: 100%;
@@ -261,7 +279,9 @@ a:hover {
 }
 .m3-dialog-scroller:before {content: ""; display: inline-block;vertical-align: middle;width: 0;height:100%;}
 
-
+.m3-dialog.__size-a .m3-dialog-inner {
+	width: calc(100% - 64px);
+}
 
 
 .ruleset-item {
@@ -291,3 +311,33 @@ a:hover {
     z-index: -1;
     float: left;
 }
+
+
+
+
+.m3-dialog.__content .m3-dialog-inner {
+	width: calc(100% - 60px);
+	max-height: calc(100% - 40px);
+}
+.edit-popup_text-block {
+	white-space: pre-wrap;
+	word-break: break-all;
+	width: 100%;
+	display: block;
+	margin: 0;
+}
+
+.m3-dialog.__text .m3-dialog-inner {
+	width: 100%;
+	height: 100%;
+	padding: 16px;
+}
+.edit-popup_title {margin: 0 0 12px 0; font-size: 15px; line-height: 18px;}
+.edit-popup_textbox {margin: 0 0 12px 0; font-size: 13px; line-height: 15px;}
+.edit-popup_image {max-width: 100%; max-height: 100%; display: inline-block;vertical-align: middle;}
+.edit-popup_content-wrapper {position:relative; padding: 0 0 20px 0;}
+.edit-popup_image-wrap {
+	display: inline-block;vertical-align: middle;
+}
+
+.app-header {padding: 6px 10px;background-color: #fafafa;}
